--- a/admin.html
+++ b/admin.html
@@ -110,6 +110,10 @@
           <label>Description (full section below images)</label>
           <textarea id="add-detailed-desc"></textarea>
         </div>
+        <div>
+          <label>Tags (comma-separated)</label>
+          <input id="add-tags" placeholder="e.g. mechanical, rgb, wireless">
+        </div>
         <h3>SEO Optimization</h3>
         <div>
           <label>Meta Title</label>
@@ -135,6 +139,7 @@
               <th>Discount (tk)</th>
               <th>Stock</th>
               <th>Availability</th>
+              <th>Tags</th>
               <th>Badge</th>
               <th>Status</th>
               <th>Actions</th>
