--- a/products.html
+++ b/products.html
@@ -45,7 +45,10 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
   </header>
 
  <main class="container">
-    <h1 id="products-title">Products</h1>
+    <div class="panel-header">
+      <h1 id="products-title">Products</h1>
+      <button id="filter-toggle">Filter</button>
+    </div>
     
     <div id="product-list" class="product-list"></div>
   </main>
@@ -65,15 +68,21 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
     <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
-
-  <!-- Cart Slider -->
-  <div id="cart-slider" class="cart-slider">
-    <button id="close-cart" class="close-viewer">&times;</button>
-    <h2>Shopping Cart</h2>
-    <div id="cart-items" class="cart-items"></div>
-    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
-    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
-    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
+  <!-- Filter Slider -->
+  <div id="filter-slider" class="filter-slider">
+    <button id="close-filter" class="close-viewer">&times;</button>
+    <h2>Filters</h2>
+    <div id="tags-filter">
+      <h3>Tags</h3>
+      <!-- Checkboxes will be added dynamically -->
+    </div>
+    <div>
+      <h3>Price Range (tk)</h3>
+      <input id="min-price" type="number" placeholder="Min Price">
+      <input id="max-price" type="number" placeholder="Max Price">
+    </div>
+    <button id="apply-filter">Apply Filters</button>
+    <button id="clear-filter">Clear Filters</button>
   </div>
 
   <!-- Cart Checkout Modal -->
@@ -134,4 +143,3 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
 </body>
 
 </html>
-
