--- a/admin.html
+++ b/admin.html
@@ -111,8 +111,8 @@
           <textarea id="add-detailed-desc"></textarea>
         </div>
         <div>
-          <label>Tags (comma-separated)</label>
-          <input id="add-tags" placeholder="e.g. mechanical, rgb, wireless">
+          <label>Attributes (format: profile:cherry, max support:100, light transmission:yes, etc.)</label>
+          <textarea id="add-attributes" placeholder="e.g. profile:cherry, max support:100, light transmission:yes"></textarea>
         </div>
         <h3>SEO Optimization</h3>
         <div>
@@ -131,17 +131,17 @@
         <table class="data-table">
           <thead>
             <tr>
-              <th></th>
+              <th>Image</th>
               <th>Name</th>
               <th>Price</th>
               <th>Category</th>
               <th>Color</th>
-              <th>Discount (tk)</th>
+              <th>Discount</th>
               <th>Stock</th>
               <th>Availability</th>
-              <th>Tags</th>
               <th>Badge</th>
               <th>Status</th>
+              <th>Attributes</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -154,7 +154,6 @@
         <table class="data-table">
           <thead>
             <tr>
-              <th></th>
               <th>Time</th>
               <th>Product</th>
               <th>Color</th>
