--- a/category.html
+++ b/category.html
@@ -3,79 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Category Products</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
-    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
-  </script>
-  <script type="module" src="script.js"></script>
+  <title>Category</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <header class="site-header">
-    <nav>
-      <a href="index.html" class="logo">
-        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
-      </a>
-      <div class="nav-links">
-        <a href="products.html">Products</a>
-        <a href="status.html">Order Status</a>
-        <a id="cart-link" style="cursor: pointer;">Cart (<span id="cart-count">0</span>)</a>
-      </div>
+  <header class="header">
+    <div class="logo">Keyboard Shop</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="cart.html">Cart</a>
+      <a href="login.html">Login/Register</a>
+      <a id="adminLink" href="admin.html" style="display:none;">Admin</a>
     </nav>
   </header>
-
-  <main class="container">
-    <div class="title-row">
-      <h1 id="category-title">Category</h1>
-      <button id="filter-toggle">Filters</button>
-    </div>
-
-    <div id="product-list" class="product-list"></div>
-  </main>
-
-  <!-- Filter Slider (same as products.html) -->
-  <div id="filter-slider" class="filter-slider">
-    <button id="close-filter" class="close-viewer">×</button>
-    <h2>Filters</h2>
-
-    <div id="price-range-section">
-      <h3>Price Range (৳)</h3>
-      <div class="row price-range-row">
-        <div>
-          <label>Min</label>
-          <input type="number" id="min-price-input" min="0" step="100">
-          <input type="range" id="min-price-slider" min="0" step="100">
-        </div>
-        <div>
-          <label>Max</label>
-          <input type="number" id="max-price-input" min="0" step="100">
-          <input type="range" id="max-price-slider" min="0" step="100">
-        </div>
-      </div>
-    </div>
-
-    <div id="filter-sections"></div>
-
-    <div class="row filter-actions">
-      <button id="apply-filters">Apply Filters</button>
-      <button id="clear-filters" class="danger">Clear Filters</button>
-    </div>
-  </div>
-
-  <!-- Cart Slider (same structure as products.html) -->
-  <div id="cart-slider" class="cart-slider">
-    <button id="close-cart" class="close-viewer">×</button>
-    <h2>Shopping Cart</h2>
-    <div id="cart-items" class="cart-items"></div>
-    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
-    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
-    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
-  </div>
-
-  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000;">
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+  <section id="categoryProducts" style="display: flex; flex-wrap: wrap; justify-content: space-around;"></section>
+  <footer>© 2025 Keyboard Shop</footer>
+  <script type="module" src="js/firebase.js"></script>
+  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="js/products.js"></script>
+  <script type="module" src="js/cart.js"></script>
+  <script type="module">
+    import { loadCategoryProducts } from './js/products.js';
+    loadCategoryProducts();
+  </script>
 </body>
 </html>
