--- a/products.html
+++ b/products.html
@@ -4,37 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products</title>
-  <link rel="icon" type="image/x-icon" href="logo t.png"> 
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="assets/logo t.png"> 
+  <link rel="stylesheet" href="assets/style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
     import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
-  <script type="module" src="script.js"></script>
-  <!-- Meta Pixel Code -->
-  <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '655776497078930');
-  fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Meta Pixel Code -->
+ <script type="module" src="js/main.js"></script>
+
 </head>
 <body>
   <header class="site-header">
      <nav>
       <a href="index.html" class="logo">
-        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+        <img src="assets/logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
       <div class="nav-links">
         <a href="products.html">Products</a>
@@ -44,23 +28,20 @@
     </nav>
   </header>
 
-  <main class="container">
-    <div class="title-row">
-      <h1 id="products-title">Products</h1>
-      <button id="filter-toggle">Filters</button>
-    </div>
+ <main class="container">
+    <h1 id="products-title">Products</h1>
     
     <div id="product-list" class="product-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">×</button>
+    <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
   <!-- Cart Slider -->
   <div id="cart-slider" class="cart-slider">
-    <button id="close-cart" class="close-viewer">×</button>
+    <button id="close-cart" class="close-viewer">&times;</button>
     <h2>Shopping Cart</h2>
     <div id="cart-items" class="cart-items"></div>
     <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
@@ -68,33 +49,15 @@
     <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
-  <!-- Filter Slider -->
-  <div id="filter-slider" class="filter-slider">
-    <button id="close-filter" class="close-viewer">×</button>
-    <h2>Filters</h2>
 
-    <div id="price-range-section">
-      <h3>Price Range (৳)</h3>
-      <div class="row price-range-row">
-        <div>
-          <label>Min</label>
-          <input type="number" id="min-price-input" min="0" step="100">
-          <input type="range" id="min-price-slider" min="0" step="100">
-        </div>
-        <div>
-          <label>Max</label>
-          <input type="number" id="max-price-input" min="0" step="100">
-          <input type="range" id="max-price-slider" min="0" step="100">
-        </div>
-      </div>
-    </div>
-
-    <div id="filter-sections"></div>
-
-    <div class="row filter-actions">
-      <button id="apply-filters">Apply Filters</button>
-      <button id="clear-filters" class="danger">Clear Filters</button>
-    </div>
+  <!-- Cart Slider -->
+  <div id="cart-slider" class="cart-slider">
+    <button id="close-cart" class="close-viewer">&times;</button>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
+    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
+    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
   <!-- Cart Checkout Modal -->
@@ -141,13 +104,13 @@
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      <img src="assets/facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
     </a>
     <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      <img src="assets/instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
     <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+      <img src="assets/whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
     </a>
   </div>
   <p>&copy; All rights reserved by The Geek Shop</p>
