--- a/status.html
+++ b/status.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Status</title>
-  <link rel="icon" type="image/x-icon" href="assets/logo t.png">
+  <link rel="icon" type="image/x-icon" href="logo t.png">
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="script.js"></script>
   <style>
     .orders-grid {display:grid;grid-template-columns:1fr;gap:16px;margin-top:16px;}
    
@@ -235,13 +235,13 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="assets/facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
     </a>
     <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="assets/instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
         <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-      <img src="assets/whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
   </div>
  
@@ -250,7 +250,7 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
   import { getFirestore, collection, query, where, getDocs, orderBy } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
-  import { firebaseConfig } from 'js/config.js';
+  import { firebaseConfig } from './config.js';
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
