--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin</title>
+  <title>Admin - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
@@ -13,8 +13,9 @@
   <script type="module" src="script.js"></script>
 </head>
 <body>
+
   <header class="site-header">
-     <nav>
+    <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -27,27 +28,32 @@
   </header>
 
   <main class="container">
-    <div id="login-panel" class="card" style="display: none;">
+
+    <!-- Login panel (shown when not logged in) -->
+    <div id="login-panel" class="card" style="display: none; max-width: 420px; margin: 80px auto;">
       <h2>Admin Login</h2>
       <form id="login-form" class="form">
         <div>
-          <label>Email</label>
-          <input id="admin-email" type="email" required>
+          <label for="admin-email">Email</label>
+          <input id="admin-email" type="email" required autocomplete="email">
         </div>
         <div>
-          <label>Password</label>
-          <input id="admin-pass" type="password" required>
+          <label for="admin-pass">Password</label>
+          <input id="admin-pass" type="password" required autocomplete="current-password">
         </div>
         <button type="submit">Login</button>
       </form>
     </div>
 
+    <!-- Main admin panel (shown when logged in) -->
     <div id="admin-panel" class="card" style="display: none;">
+
       <div class="panel-header">
         <h2>Admin Panel</h2>
-        <button onclick="logoutAdmin()">Logout</button>
+        <button onclick="logoutAdmin ? logoutAdmin() : signOut(getAuth())">Logout</button>
       </div>
 
+      <!-- Add New Product -->
       <h2>Add Product</h2>
       <form id="add-product-form" class="form">
         <div class="row">
@@ -57,23 +63,26 @@
           </div>
           <div>
             <label>Price (tk)</label>
-            <input id="add-price" required>
+            <input id="add-price" type="number" required min="0">
           </div>
         </div>
+
         <div class="row">
           <div>
             <label>Discount (tk)</label>
-            <input id="add-discount" value="0">
+            <input id="add-discount" type="number" value="0" min="0">
           </div>
           <div>
             <label>Image URLs (comma-separated)</label>
-            <input id="add-images" required>
+            <input id="add-images" required placeholder="https://..., https://...">
           </div>
         </div>
+
         <div class="row">
           <div>
             <label>Category</label>
             <select id="add-category" required>
+              <option value="">Select category</option>
               <option value="Keycaps">Keycaps</option>
               <option value="Switches">Switches</option>
               <option value="Keyboard and Mouse">Keyboard and Mouse</option>
@@ -82,13 +91,14 @@
           </div>
           <div>
             <label>Color</label>
-            <input id="add-color">
+            <input id="add-color" placeholder="e.g. Black, White, Navy">
           </div>
         </div>
+
         <div class="row">
           <div>
             <label>Stock</label>
-            <input id="add-stock" type="number" value="0">
+            <input id="add-stock" type="number" value="0" min="0">
           </div>
           <div>
             <label>Availability</label>
@@ -99,17 +109,23 @@
             </select>
           </div>
         </div>
+
         <div>
-          <label><input type="checkbox" id="add-hotdeal"> Hot Deal</label>
+          <label>
+            <input type="checkbox" id="add-hotdeal"> Hot Deal
+          </label>
         </div>
+
         <div>
           <label>Specification (shown next to price)</label>
-          <textarea id="add-desc"></textarea>
+          <textarea id="add-desc" rows="3"></textarea>
         </div>
+
         <div>
           <label>Description (full section below images)</label>
-          <textarea id="add-detailed-desc"></textarea>
+          <textarea id="add-detailed-desc" rows="6"></textarea>
         </div>
+
         <h3>SEO Optimization</h3>
         <div>
           <label>Meta Title</label>
@@ -117,26 +133,31 @@
         </div>
         <div>
           <label>Meta Description</label>
-          <textarea id="add-meta-desc" placeholder="Short SEO description (150-160 chars)"></textarea>
+          <textarea id="add-meta-desc" placeholder="Short SEO-friendly description (150-160 characters)" rows="3"></textarea>
         </div>
-        <button type="submit">Add Product</button>
+
+        <h3>Filters / Tags</h3>
+        <div id="add-filters"></div>
+
+        <button type="submit" style="margin-top: 20px;">Add Product</button>
       </form>
 
+      <!-- Products Table -->
       <h2>Products</h2>
       <div class="table-wrapper">
         <table class="data-table">
           <thead>
             <tr>
-              <th></th>
+              <th>Image</th>
               <th>Name</th>
               <th>Price</th>
               <th>Category</th>
               <th>Color</th>
-              <th>Discount (tk)</th>
+              <th>Discount</th>
               <th>Stock</th>
               <th>Availability</th>
-              <th>Badge</th>
-              <th>Status</th>
+              <th>Hot Deal</th>
+              <th>Filters</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -144,31 +165,63 @@
         </table>
       </div>
 
+      <!-- Orders Table -->
       <h2>Orders</h2>
       <div class="table-wrapper">
         <table class="data-table">
           <thead>
             <tr>
-              <th></th>
               <th>Time</th>
-              <th>Product</th>
-              <th>Color</th>
-              <th>Qty</th>
-              <th>Delivery</th>
+              <th>Customer</th>
+              <th>Phone</th>
+              <th>Items</th>
+              <th>Total</th>
               <th>Paid</th>
               <th>Due</th>
-              <th>Name</th>
-              <th>Phone</th>
-              <th>Address</th>
-              <th>Payment</th>
+              <th>Payment Method</th>
               <th>Txn ID</th>
               <th>Status</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody id="orders-body"></tbody>
         </table>
       </div>
+
+      <!-- Filter Sections Management -->
+      <h2>Manage Filter Sections</h2>
+      <p style="color: #6b7280; margin-bottom: 16px;">
+        Create categories like "Color", "Switch Type", "Profile", etc. and add tags to them.
+      </p>
+
+      <form id="add-section-form" class="form" style="max-width: 500px; margin-bottom: 32px;">
+        <div class="row">
+          <div style="flex: 1;">
+            <label>Section Name</label>
+            <input id="add-section-name" required placeholder="e.g. Color, Layout, Material">
+          </div>
+          <div style="align-self: flex-end;">
+            <button type="submit">Add Section</button>
+          </div>
+        </div>
+      </form>
+
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th>Section Name</th>
+              <th>Tags (comma separated)</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="sections-body"></tbody>
+        </table>
+      </div>
+
     </div>
+
   </main>
+
 </body>
 </html>
